queries update aggregation level

--- a/Covid/CovidQueries.ipynb
+++ b/Covid/CovidQueries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
     "        ?place a schema:Place.\n",
     "        ?statistics covid:statisticsOf ?place.\n",
     "        ?statistics covid:date ?date.\n",
-    "        ?statistics covid:aggregationLevel ?al.\n",
+    "        ?place covid:aggregationLevel ?al.\n",
     "        ?statistics covid:new_confirmed ?new_confirmed.\n",
     "        FILTER (?new_confirmed > \"2000\"^^xsd:integer).\n",
     "        FILTER (?al >= \"2\"^^xsd:integer).\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
     "WHERE{ ?subregion2 a schema:Place.\n",
     "        ?subregion2 schema:name ?region_name.\n",
     "        ?statistics covid:statisticsOf ?subregion2.\n",
-    "        ?statistics covid:aggregationLevel \"2\"^^xsd:integer.\n",
+    "        ?subregion2 covid:aggregationLevel \"2\"^^xsd:integer.\n",
     "        ?statistics covid:new_deceased ?new_deceased.\n",
     "        ?statistics covid:date ?date.\n",
     "        ?subregion2 covid:population ?population.\n",
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -315,21 +315,21 @@
       "text/html": [
        "<div class=\"krn-spql\"><table><tr class=hdr><th>country</th><th>type</th>\n",
        "<th>total_confirmed</th><th>type</th>\n",
-       "<th>Date</th><th>type</th></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/US\" target=\"_other\">https://schema.org/Place/US</a></td><td class=typ>uri</td>\n",
-       "<td class=val>13383321</td><td class=typ>literal, none</td>\n",
-       "<td class=val>2020-12-01</td><td class=typ>literal, none</td></tr><tr class=even><td class=val><a href=\"https://schema.org/Place/FR\" target=\"_other\">https://schema.org/Place/FR</a></td><td class=typ>uri</td>\n",
+       "<th>Date</th><th>type</th></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/FR\" target=\"_other\">https://schema.org/Place/FR</a></td><td class=typ>uri</td>\n",
        "<td class=val>2086288</td><td class=typ>literal, none</td>\n",
-       "<td class=val>2020-11-21</td><td class=typ>literal, none</td></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/US\" target=\"_other\">https://schema.org/Place/US</a></td><td class=typ>uri</td>\n",
+       "<td class=val>2020-11-21</td><td class=typ>literal, none</td></tr><tr class=even><td class=val><a href=\"https://schema.org/Place/US\" target=\"_other\">https://schema.org/Place/US</a></td><td class=typ>uri</td>\n",
+       "<td class=val>13383321</td><td class=typ>literal, none</td>\n",
+       "<td class=val>2020-12-01</td><td class=typ>literal, none</td></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/US\" target=\"_other\">https://schema.org/Place/US</a></td><td class=typ>uri</td>\n",
        "<td class=val>12591165</td><td class=typ>literal, none</td>\n",
-       "<td class=val>2020-11-26</td><td class=typ>literal, none</td></tr><tr class=even><td class=val><a href=\"https://schema.org/Place/RU\" target=\"_other\">https://schema.org/Place/RU</a></td><td class=typ>uri</td>\n",
-       "<td class=val>2015608</td><td class=typ>literal, none</td>\n",
-       "<td class=val>2020-11-21</td><td class=typ>literal, none</td></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/RU\" target=\"_other\">https://schema.org/Place/RU</a></td><td class=typ>uri</td>\n",
-       "<td class=val>2162503</td><td class=typ>literal, none</td>\n",
        "<td class=val>2020-11-26</td><td class=typ>literal, none</td></tr><tr class=even><td class=val><a href=\"https://schema.org/Place/BR\" target=\"_other\">https://schema.org/Place/BR</a></td><td class=typ>uri</td>\n",
        "<td class=val>6118708</td><td class=typ>literal, none</td>\n",
        "<td class=val>2020-11-26</td><td class=typ>literal, none</td></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/BR\" target=\"_other\">https://schema.org/Place/BR</a></td><td class=typ>uri</td>\n",
        "<td class=val>5981767</td><td class=typ>literal, none</td>\n",
-       "<td class=val>2020-11-21</td><td class=typ>literal, none</td></tr></table><div class=\"tinfo\">Total: 7, Shown: 7</div></div>"
+       "<td class=val>2020-11-21</td><td class=typ>literal, none</td></tr><tr class=even><td class=val><a href=\"https://schema.org/Place/RU\" target=\"_other\">https://schema.org/Place/RU</a></td><td class=typ>uri</td>\n",
+       "<td class=val>2015608</td><td class=typ>literal, none</td>\n",
+       "<td class=val>2020-11-21</td><td class=typ>literal, none</td></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/RU\" target=\"_other\">https://schema.org/Place/RU</a></td><td class=typ>uri</td>\n",
+       "<td class=val>2162503</td><td class=typ>literal, none</td>\n",
+       "<td class=val>2020-11-26</td><td class=typ>literal, none</td></tr></table><div class=\"tinfo\">Total: 7, Shown: 7</div></div>"
       ]
      },
      "metadata": {},
@@ -346,7 +346,7 @@
     "WHERE{ ?country a schema:Place.\n",
     "        ?statistics covid:statisticsOf ?country.\n",
     "        ?statistics covid:date ?date.\n",
-    "        ?statistics covid:aggregationLevel \"0\"^^xsd:integer.\n",
+    "        ?country covid:aggregationLevel \"0\"^^xsd:integer.\n",
     "        ?statistics covid:total_confirmed ?total_confirmed.\n",
     "        FILTER (?total_confirmed > \"2000000\"^^xsd:integer).\n",
     "     }"
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -386,27 +386,27 @@
        "<th>new_confirmed</th><th>type</th>\n",
        "<th>Date</th><th>type</th>\n",
        "<th>max_temp</th><th>type</th>\n",
-       "<th>min_temp</th><th>type</th></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/TG\" target=\"_other\">https://schema.org/Place/TG</a></td><td class=typ>uri</td>\n",
-       "<td class=val>0</td><td class=typ>literal, none</td>\n",
-       "<td class=val>18</td><td class=typ>literal, none</td>\n",
-       "<td class=val>2020-11-26</td><td class=typ>literal, none</td>\n",
-       "<td class=val>35.092593</td><td class=typ>literal, none</td>\n",
-       "<td class=val>22.611111</td><td class=typ>literal, none</td></tr><tr class=even><td class=val><a href=\"https://schema.org/Place/CA\" target=\"_other\">https://schema.org/Place/CA</a></td><td class=typ>uri</td>\n",
-       "<td class=val>79</td><td class=typ>literal, none</td>\n",
-       "<td class=val>4642</td><td class=typ>literal, none</td>\n",
-       "<td class=val>2020-11-21</td><td class=typ>literal, none</td>\n",
-       "<td class=val>-6.594444</td><td class=typ>literal, none</td>\n",
-       "<td class=val>-11.983333</td><td class=typ>literal, none</td></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/CN\" target=\"_other\">https://schema.org/Place/CN</a></td><td class=typ>uri</td>\n",
+       "<th>min_temp</th><th>type</th></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/CN\" target=\"_other\">https://schema.org/Place/CN</a></td><td class=typ>uri</td>\n",
        "<td class=val>0</td><td class=typ>literal, none</td>\n",
        "<td class=val>100</td><td class=typ>literal, none</td>\n",
        "<td class=val>2020-12-01</td><td class=typ>literal, none</td>\n",
        "<td class=val>-3.191358</td><td class=typ>literal, none</td>\n",
-       "<td class=val>-12.481481</td><td class=typ>literal, none</td></tr><tr class=even><td class=val><a href=\"https://schema.org/Place/TH\" target=\"_other\">https://schema.org/Place/TH</a></td><td class=typ>uri</td>\n",
+       "<td class=val>-12.481481</td><td class=typ>literal, none</td></tr><tr class=even><td class=val><a href=\"https://schema.org/Place/TG\" target=\"_other\">https://schema.org/Place/TG</a></td><td class=typ>uri</td>\n",
+       "<td class=val>0</td><td class=typ>literal, none</td>\n",
+       "<td class=val>18</td><td class=typ>literal, none</td>\n",
+       "<td class=val>2020-11-26</td><td class=typ>literal, none</td>\n",
+       "<td class=val>35.092593</td><td class=typ>literal, none</td>\n",
+       "<td class=val>22.611111</td><td class=typ>literal, none</td></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/TH\" target=\"_other\">https://schema.org/Place/TH</a></td><td class=typ>uri</td>\n",
        "<td class=val>0</td><td class=typ>literal, none</td>\n",
        "<td class=val>6</td><td class=typ>literal, none</td>\n",
        "<td class=val>2020-11-26</td><td class=typ>literal, none</td>\n",
        "<td class=val>35.283333</td><td class=typ>literal, none</td>\n",
-       "<td class=val>24.938889</td><td class=typ>literal, none</td></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/RU\" target=\"_other\">https://schema.org/Place/RU</a></td><td class=typ>uri</td>\n",
+       "<td class=val>24.938889</td><td class=typ>literal, none</td></tr><tr class=even><td class=val><a href=\"https://schema.org/Place/CA\" target=\"_other\">https://schema.org/Place/CA</a></td><td class=typ>uri</td>\n",
+       "<td class=val>79</td><td class=typ>literal, none</td>\n",
+       "<td class=val>4642</td><td class=typ>literal, none</td>\n",
+       "<td class=val>2020-11-21</td><td class=typ>literal, none</td>\n",
+       "<td class=val>-6.594444</td><td class=typ>literal, none</td>\n",
+       "<td class=val>-11.983333</td><td class=typ>literal, none</td></tr><tr class=odd><td class=val><a href=\"https://schema.org/Place/RU\" target=\"_other\">https://schema.org/Place/RU</a></td><td class=typ>uri</td>\n",
        "<td class=val>463</td><td class=typ>literal, none</td>\n",
        "<td class=val>23610</td><td class=typ>literal, none</td>\n",
        "<td class=val>2020-11-21</td><td class=typ>literal, none</td>\n",
@@ -433,7 +433,7 @@
     "SELECT ?country ?new_deceased ?new_confirmed (STR(?date) AS ?Date) ?max_temp ?min_temp\n",
     "WHERE{ ?country a schema:Place.\n",
     "        ?statistics covid:statisticsOf ?country.\n",
-    "        ?statistics covid:aggregationLevel \"0\"^^xsd:integer.\n",
+    "        ?country covid:aggregationLevel \"0\"^^xsd:integer.\n",
     "        ?statistics covid:new_deceased ?new_deceased.\n",
     "        ?statistics covid:new_confirmed ?new_confirmed.\n",
     "        ?statistics covid:date ?date.\n",
